<resources>
    <string name="app_name">AssignMe_1.1</string>
    //landing
    <string name="lbl_assignme">AssignMe</string>
    <string name="msg_digital_intelli">Digital Intelligence through Digital Learning</string>
    //login
    <string name="lbl_hi_welcome">Hi, Welcome!</string>
    <string name="lbl_login">Log in</string>
    <string name="lbl_email_address">Email address</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_your_email">Your email</string>
    <string name="lbl_password">Password</string>
    <string name="msg_forgot_password">Forgot password?</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_don_t_have_an">Don\u2019t have an account?  </string>
    //signup
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_signup">Sign up</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_create_a_password">Create a password</string>
    <string name="lbl_confirm_password">Confirm password</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_already_have_an">Already have an account?</string>


    <string name="lbl_send_code">Send code</string>
    <string name="msg_remember_password">Remember password?  </string>
    <string name="msg_otp_title">Please check your email</string>
    <string name="msg_otp_desc">We\u2019ve sent a code to your email</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_confirm_new_password">Confirm New Password</string>
    <string name="lbl_verify">Verify</string>
    <string name="msg_password_change">Password changed</string>
    <string name="msg_password_has_be">Password has been changed successfully</string>
    <string name="lbl_back_to_login">Back to login</string>
    <string name="lbl_reset_pass_desc">Please type something you\u2019ll remember</string>
    <string name="lbl_forgot_pass_desc">Don\u2019t worry! It happens. Please enter the email associated with your account</string>

    <string name="lbl_hello">Hello,</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_join_class">Join Class</string>
    <string name="lbl_join">Join</string>
    <string name="msg_ask_the_teacher">Ask the teacher for the class code,&#13;
then enter the code below.</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_class_code">Class Code</string>
    <string name="lbl_column_must_be_filled">Column must be filled</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_change_username">Change Username</string>
    <string name="lbl_edit_username_desc">Enter a new username. This username will be displayed to others. </string>


    <string name="waving_hand">wavingHandImage</string>
    <string name="input_email">Your Email</string>
    <string name="input_password">Password</string>
    <string name="hi_welcome">Hi, Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lbl_home">Home</string>
    <string name="lbl_timeline">Timeline</string>
    <string name="lbl_archive">Archives</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_descBottomBar">Bottom bar or Navigation Bar</string>
    <string name="lbl_logout_account">Logout Account?</string>
    <string name="lbl_are_you_sure_you">Are you sure you sure want to logout from this account?</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_otpInvalid">OTP must be 4 digits</string>
    <string name="lbl_emailInvalid">Email is invalid</string>
    <string name="lbl_emailFormatInvalid">Email format is invalid</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="profile_info">Profile info</string>
    <string name="code_cannot_be_empty">Code cannot be empty</string>
    <string name="answer_cannot_be_empty">Your answer cannot be empty</string>
    <string name="code_must_be_6_characters">Code must be 6 characters</string>
    <string name="gender">Gender</string>
    <string name="pick_a_gender">Pick a gender</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="select_your_gender_this_will_be_displayed_only_to_you">Select your gender. This will be displayed only to you.</string>
    <string name="add_work">+ Add work</string>
    <string name="your_work">Your Work</string>
    <string name="attachments">Attachments</string>
    <string name="unsubmit">Unsubmit</string>
    <string name="upload_submission">Upload Submission</string>
    <string name="hand_in">Hand in</string>
    <string name="title_activity_attachment_view">AttachmentView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="answerTask">Answer Task</string>
    <string name="submit">Submit</string>
    <string name="done_late">Done Late</string>
    <string name="handed_in">Handed In</string>
    <string name="answer">Answer</string>
</resources>