<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal|center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".EditGender">
    <LinearLayout
        android:id="@+id/popUpFpEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/background_fp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/closeButtonJoinClass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/column_bg">
            <ImageView
                android:id="@+id/btnBackUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_black_new_24"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtChangeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="56dp"
            android:text="@string/pick_a_gender"
            android:singleLine="true"
            style="@style/txtPoppinsbold28"/>

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/select_your_gender_this_will_be_displayed_only_to_you"
            android:singleLine="false"
            android:ellipsize="end"
            android:gravity="start"
            style="@style/txtInterregular14b2"/>

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/female" />

        <LinearLayout
            android:id="@+id/linearRememberPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                style="@style/btnSolidRounded"
                android:text="@string/lbl_save"
                android:textAllCaps="false"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>