<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">

    <LinearLayout
        android:id="@+id/linearLanding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/groupStylewhite">
        <ImageView
            android:id="@+id/bookImage"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:scaleType="fitXY"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/img_notebookdynami"/>

        <LinearLayout
            android:id="@+id/linearText"
            android:layout_width="340dp"
            android:layout_height="110dp"
            android:layout_gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAssignMe"
                style="@style/txtPoppinsbold32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_assignme" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/txtInterregular17"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/msg_digital_intelli"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btnSignIn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_width="350dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:singleLine="true"
            android:text="@string/lbl_sign_in"
            android:textAllCaps="false"
            style="@style/btnSolidRounded"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btnCreateAccount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:layout_width="350dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:singleLine="true"
            android:text="@string/lbl_create_account"
            android:textAllCaps="false"
            style="@style/btnRoundedOutline"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>