<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFpOtp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FP_2_otp">

    <LinearLayout
        android:id="@+id/popUpFpOtp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/background_fp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/closeButtonFpEmailBorder"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/column_bg">
            <ImageView
                android:id="@+id/backButtonFpOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_black_new_24"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtForgotpassword"
            style="@style/txtPoppinsbold28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="56dp"
            android:ellipsize="end"
            android:gravity="start"
            android:text="@string/msg_otp_title"/>

        <TextView
            android:id="@+id/txtTitleEmailFP"
            style="@style/txtInterregular14b2"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="13dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_otp_desc"/>

        <com.goodiebag.pinview.Pinview
            app:pinBackground="@drawable/column_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            app:textSize="18sp"
            app:pinWidth="77dp"
            app:pinHeight="77dp"
            app:pinLength="4"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint=""
            app:splitWidth="15dp"
            app:inputType="number"
            app:password="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="56dp"
            android:layout_marginTop="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/lbl_verify"
            android:textAllCaps="false"
            style="@style/btnSolidRounded" />

        <LinearLayout
            android:id="@+id/linearRememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtRememberpassword"
                android:ellipsize="none"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_remember_password"
                style="@style/txtInterregular14_1"/>
            <TextView
                android:id="@+id/txtLoginInFpOtp"
                android:ellipsize="none"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:singleLine="true"
                android:text="@string/lbl_login"
                style="@style/txtInterregular14_1Bold"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>