<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFpStatus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FP_4_status">

    <LinearLayout
        android:id="@+id/popUpFpStatus"
        android:layout_width="335dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/background_fp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgKey"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:layout_height="@dimen/_180pxh"
            android:layout_width="@dimen/_180pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_keydynamic"/>
        <TextView
            android:id="@+id/txtForgotpassword"
            style="@style/txtPoppinsbold28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:lineSpacingExtra="-5dp"
            android:text="@string/msg_password_change"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/txtTitleEmailFP"
            style="@style/txtInterregular14b2"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/msg_password_has_be"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackLogin"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/lbl_back_to_login"
            android:textAllCaps="false"
            style="@style/btnSolidRounded" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>