<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal|center_vertical"
    android:id="@+id/customDialog"
    android:background="@color/white"
    app:cardCornerRadius="30sp"
    android:elevation="20sp">

    <LinearLayout
        android:id="@+id/popUpFpEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/background_fp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/closeButtonJoinClass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/column_bg">
            <ImageView
                android:id="@+id/btnBackUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_black_new_24"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtChangeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="56dp"
            android:text="@string/lbl_change_username"
            android:singleLine="true"
            style="@style/txtPoppinsbold28"/>

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lbl_edit_username_desc"
            android:singleLine="false"
            android:ellipsize="end"
            android:gravity="start"
            style="@style/txtInterregular14b2"/>

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lbl_username"
            style="@style/txtInterregular14black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/black_900_7f"
            app:placeholderText="Enter new username"
            app:placeholderTextColor="@color/black_900_7f">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_17pxv"
                android:ellipsize="end"
                android:ems="10"
                android:maxLength="60"
                android:textAllCaps="false"
                android:inputType="text"
                android:singleLine="true"
                style="@style/etRoundedOutlineBlack"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearRememberPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                style="@style/btnSolidRounded"
                android:text="@string/lbl_save"
                android:textAllCaps="false"/>
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>